ansible/roles_ocp_workloads/ocp4-workload-fsi-risk-analytics/files/var-calc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: var-calc
  namespace: var-calculation
  labels:
    app: var-calc
spec:
  replicas: 3
  selector:
    matchLabels:
      app: var-calc
  template:
    metadata:
      labels:
        app: var-calc
    spec:
      containers:
        - name: var-calc
          image: lcspangler/var-calc:1635785333
          imagePullPolicy: Always
