ansible/roles_ocp_workloads/ocp4-workload-fsi-risk-analytics/files/var-wrapper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: var-wrapper
  namespace: var-wrapper
  labels:
    app: var-wrapper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: var-wrapper
  template:
    metadata:
      labels:
        app: var-wrapper
    spec:
      containers:
        - name: var-wrapper
          image: lcspangler/var-wrapper-service:1.0.0-SNAPSHOT
          imagePullPolicy: Always
