ansible/roles_ocp_workloads/ocp4-workload-fsi-risk-analytics/files/var-calc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: var-calc
  namespace: var-calculation
  labels:
    app: var-calc
spec:
  ports:
    - port: 5000
  selector:
    app: var-calc
