ansible/roles_ocp_workloads/ocp4-workload-fsi-risk-analytics/files/var-wrapper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: var-wrapper
  namespace: var-wrapper
  labels:
    app: var-wrapper
spec:
  ports:
    - port: 8080
  selector:
    app: var-wrapper
