ansible/roles_ocp_workloads/ocp4-workload-fsi-risk-analytics/files/kibana-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: kibana-route
  namespace: risk
  labels:
    common.k8s.elastic.co/type: kibana
    kibana.k8s.elastic.co/name: kibana-sample
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: kibana-sample-kb-http
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
