ansible/roles_ocp_workloads/ocp4-workload-fsi-risk-analytics/files/mgmt-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: risk-management-ui
    app.kubernetes.io/component: risk-management-ui
    app.kubernetes.io/instance: risk-management-ui
  name: risk-management-ui
  namespace: risk
spec:
  port:
    targetPort: 8080-tcp
  to:
    name: risk-management-ui
