ansible/roles_ocp_workloads/ocp4-workload-fsi-risk-analytics/files/risk-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: risk-officer-ui
    app.kubernetes.io/component: risk-officer-ui
    app.kubernetes.io/instance: risk-officer-ui
  name: risk-officer-ui
  namespace: risk
spec:
  port:
    targetPort: 8080-tcp
  to:
    name: risk-officer-ui
